fix: Align property filter token light height with operation selector

--- a/src/property-filter/styles.scss
+++ b/src/property-filter/styles.scss
@@ -101,6 +101,9 @@
 
 .token-trigger {
   @include styles.text-wrapping;
+
+  // Setting line height to match line height of the Select component used for operation selector.
+  line-height: awsui.$line-height-body-m;
 }
 
 .remove-all,
